Subdivision Surface Modifier (Simple) on faceless corner acts like Catmull-Clark #67599

Closed
opened 2019-07-24 17:48:47 +02:00 by takaaki takeda · 11 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-23 13:52, hash: b63f0266a0
Worked: (optional)

Short description of error
When Subdivision Surface Modifier (Simple Type) is added on faceless edge corner,
The mesh is smoothed as if Catmull-Clark Type.
This is not the way 2.79 was.
I have captured a screenshot for both versions below.
SimleSubdiv.png

Exact steps for others to reproduce the error
Add plane and then edit the plane.
Delete the face by Delete Only Faces. Four vertices and faceless edges remain.
Add Subdivision Surface Modifier and set it to Simple Type.
The mesh is smoothed as if Catmull-Clark Type.

Though it looks that the difference have little meanings since faceless edges are not rendered,
some modifiers (Skin Modifier for example) can depend on the shape of faceless edges,
This difference can cause some trouble when importing models from 2.79.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-23 13:52, hash: `b63f0266a0` Worked: (optional) **Short description of error** When Subdivision Surface Modifier (Simple Type) is added on faceless edge corner, The mesh is smoothed as if Catmull-Clark Type. This is not the way 2.79 was. I have captured a screenshot for both versions below. ![SimleSubdiv.png](https://archive.blender.org/developer/F7626769/SimleSubdiv.png) **Exact steps for others to reproduce the error** Add plane and then edit the plane. Delete the face by Delete Only Faces. Four vertices and faceless edges remain. Add Subdivision Surface Modifier and set it to Simple Type. The mesh is smoothed as if Catmull-Clark Type. Though it looks that the difference have little meanings since faceless edges are not rendered, some modifiers (Skin Modifier for example) can depend on the shape of faceless edges, This difference can cause some trouble when importing models from 2.79.
Author

Added subscriber: @popqjp

Added subscriber: @popqjp

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Sergey Sharybin was assigned by Germano Cavalcante 2019-07-25 16:20:14 +02:00

I can confirm, subdivision of the Simple type to loose edges does not have the expected effect.

I can confirm, subdivision of the `Simple` type to loose edges does not have the expected effect.

This issue was referenced by cb10bd379b

This issue was referenced by cb10bd379b2d4b33c1626c7bff3c571f26e1493c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

I appreciate quick fixing.
I have tried with new build at date: 2019-07-25 14:34
I found that simple subdivision surface still behaves strangely on loose edges.

Attached image is a suzanne with all faces removed (only loose edges) with simple subdivision surface.
Subdivision.png
It looks that z-components of subdivided vertices are set to be 0.
Only x and y components are subdivided properly, I guess.

I appreciate quick fixing. I have tried with new build at date: 2019-07-25 14:34 I found that simple subdivision surface still behaves strangely on loose edges. Attached image is a suzanne with all faces removed (only loose edges) with simple subdivision surface. ![Subdivision.png](https://archive.blender.org/developer/F7630207/Subdivision.png) It looks that z-components of subdivided vertices are set to be 0. Only x and y components are subdivided properly, I guess.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Actually the ideal is to make another report.
But @Sergey, can you have a look at that problem described in the comment?

Actually the ideal is to make another report. But @Sergey, can you have a look at that problem described in the comment?

@popqjp, please make a new report, is better this way.

Also, is it only affecting Simple subdivisions or Catmull-Clark as well?

@popqjp, please make a new report, is better this way. Also, is it only affecting Simple subdivisions or Catmull-Clark as well?
Author

O.K. I will make a new report.
It is affecting Simple subdivisions only.
Catmull-Clark looks good.

O.K. I will make a new report. It is affecting Simple subdivisions only. Catmull-Clark looks good.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67599
No description provided.