Fix T67599: Issue with Simple subdivision of loose edges

They were always acting as a B-Spline subdivision.